# DEIMKit

./: pyproject.toml
scripts/: quickstart.py
