[project]
authors = [{ name = "theone25", email = "mohamedbouziani25@gmail.com" }]
name = "deimkit"
requires-python = ">= 3.10, < 3.12"
version = "0.2.1"
dependencies = [
    "faster-coco-eval>=1.6.5,<2",
    "pyyaml>=6.0.2,<7",
    "tensorboard>=2.19.0,<3",
    "scipy>=1.15.2,<2",
    "calflops>=0.3.2,<0.4",
    "transformers>=4.49.0,<5",
    "opencv-python>=4.11.0.86,<5",
    "loguru>=0.7.3,<0.8",
    "matplotlib",
    "onnx>=1.17.0,<2",
    "gradio>=5.20.1,<6",
    "onnxsim>=0.4.36,<0.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies]
ipywidgets = ">=8.1.5,<9"
ipykernel = ">=6.29.5,<7"
cmake = ">=3.31.6,<4"

[tool.pixi.pypi-dependencies]
deimkit = { path = ".", editable = true }

[tool.pixi.feature.gpu]
platforms = ["linux-64", "win-64"]

[tool.pixi.feature.gpu.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }
onnxruntime-gpu = ">=1.19.2"
tensorrt = ">=10.1.0"
tensorrt-cu12 = ">=10.1.0"
tensorrt-cu12-bindings = ">=10.1.0"
tensorrt-cu12-libs = ">=10.1.0"

[tool.pixi.feature.cpu.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }
onnxruntime = ">=1.19.2"

[tool.pixi.target.osx.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }
onnxruntime = ">=1.19.2"

[tool.pixi.environments]
cuda = ["gpu"]
cpu = ["cpu"]
default = { features = ["cpu"] }


[tool.pixi.tasks]
quickstart = "python scripts/quickstart.py"
live-inference = "python scripts/live_inference.py"
live-inference-pretrained = "python scripts/live_inference_pretrained.py"
train-model = "python scripts/train.py"
gradio-demo = "python scripts/gradio_demo.py"
export = "python scripts/export.py"
